kubernetes/apps/vaultwarden/httproute-vaultwarden.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: cloudflare-tunnel
      namespace: cloudflare-tunnel-system
      sectionName: https
  hostnames:
    - vw.alialjaffer.com
  rules:
    - backendRefs:
        - name: vaultwarden
          port: 80
